[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/T0_Button.gd" type="Script" id=1]
[ext_resource path="res://Icons/Toxic.png" type="Texture" id=2]
[ext_resource path="res://Scripts/T0_TextureButton.gd" type="Script" id=3]
[ext_resource path="res://Icons/Glow.png" type="Texture" id=4]
[ext_resource path="res://diffusion/Rob/Roboto-Regular.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
use_filter = true
font_data = ExtResource( 5 )

[node name="IconButton" type="Control" groups=[
"Button",
"T0",
]]
mouse_filter = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = -1.0
margin_right = 55.0
margin_bottom = 55.0
button_mask = 3
texture_normal = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Glow" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 0.913725, 0, 0.509804 )
position = Vector2( 27.5955, 26.5378 )
scale = Vector2( 1.36039, 1.36039 )
texture = ExtResource( 4 )

[node name="Search_Glow" type="Sprite" parent="."]
visible = false
modulate = Color( 0.219608, 1, 0, 0.509804 )
position = Vector2( 27.5955, 26.5378 )
scale = Vector2( 1.36039, 1.36039 )
texture = ExtResource( 4 )

[node name="Counter" type="Label" parent="."]
margin_top = 41.0
margin_right = 17.0
margin_bottom = 72.0
text = "
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="."]
margin_top = 55.0
margin_right = 56.0
margin_bottom = 69.0
grow_horizontal = 2
custom_fonts/font = SubResource( 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Name"]
self_modulate = Color( 0, 0, 0, 1 )
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="left" from="TextureButton" to="." method="_on_TextureButton_left"]
[connection signal="mouse_entered" from="TextureButton" to="." method="_on_TextureButton_mouse_entered"]
[connection signal="mouse_exited" from="TextureButton" to="." method="_on_TextureButton_mouse_exited"]
[connection signal="right" from="TextureButton" to="." method="_on_TextureButton_right"]
